syntax = "proto3";

option java_package = "ru.itmo.common.domain.message";

enum Status {
    NOT_PROCESSED = 0;
    PROCESSED = 1;
    UNPROCESSABLE = 2;
}

message EventStatusMessage {
  string event_id = 1;
  Status event_status = 2;
}